// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Variable Reflection should compile object with symbol: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Variable: objectWithSymbol

> \`const\` **objectWithSymbol**: \`object\`

**Defined in**: [variables.ts:1](http://source-url)

Comments variable with symbol

## Type declaration

### \\[sym\\]

> **\\[sym\\]**: \`string\` = \`'value'\`

Comments for symbol
"
`;

exports[`Variable Reflection should compile object with symbol: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Variable: objectWithSymbol

\`\`\`ts
const objectWithSymbol: object;
\`\`\`

**Defined in**: [variables.ts:1](http://source-url)

Comments variable with symbol

## Type declaration

| Name | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| <a id="sym"></a> \`[sym]\` | \`string\` | 'value' | Comments for symbol |
"
`;

exports[`Variable Reflection should compile type operator variable: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Variable: typeOperatorVariable

> \`const\` **typeOperatorVariable**: unique \`symbol\`

**Defined in**: [variables.ts:1](http://source-url)

Comments for typeOperatorVariable
"
`;

exports[`Variable Reflection should compile type operator variable: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Variable: typeOperatorVariable

\`\`\`ts
const typeOperatorVariable: unique symbol;
\`\`\`

**Defined in**: [variables.ts:1](http://source-url)

Comments for typeOperatorVariable
"
`;

exports[`Variable Reflection should compile variable assigned to a string: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Variable: stringVariable

> \`const\` **stringVariable**: \`"stringConstWithDefaultValue"\` = \`'stringConstWithDefaultValue'\`

**Defined in**: [variables.ts:1](http://source-url)

A simple string variable
"
`;

exports[`Variable Reflection should compile variable assigned to a string: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Variable: stringVariable

\`\`\`ts
const stringVariable: "stringConstWithDefaultValue" = 'stringConstWithDefaultValue';
\`\`\`

**Defined in**: [variables.ts:1](http://source-url)

A simple string variable
"
`;

exports[`Variable Reflection should compile variable assigned to an object literal: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Variable: objectLiteralVariable

> \`const\` **objectLiteralVariable**: \`object\`

**Defined in**: [variables.ts:1](http://source-url)

Comments for objectLiteralVariable

## See

xyz.com

## Type declaration

### valueA

> **valueA**: \`number\` = \`100\`

Comments for valueA

### valueB

> **valueB**: \`boolean\` = \`true\`

### valueX

> **valueX**: \`object\`

Comments for valueX

#### valueX.valueA

> **valueA**: \`number\`[]

Comment for valueX.valueA

#### valueX.valueY()

> **valueY**: (\`z\`) => \`object\`

##### Parameters

###### z

\`string\`

##### Returns

\`object\`

###### a

> **a**: \`string\` = \`'test'\`

###### b

> **b**: \`string\` = \`z\`

###### c

> **c**: \`object\`

###### c.a

> **a**: \`number\` = \`1\`

###### c.b

> **b**: \`number\` = \`2\`

#### valueX.valueZ

> **valueZ**: \`string\` = \`'foo'\`

### valueY()

> **valueY**: (\`unionParam\`, \`_undercoreParam_\`) => \`string\`

#### Parameters

##### unionParam

\`"a"\` | \`"b"\`

##### \\_undercoreParam\\_

\`string\`

#### Returns

\`string\`
"
`;

exports[`Variable Reflection should compile variable assigned to an object literal: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Variable: objectLiteralVariable

\`\`\`ts
const objectLiteralVariable: object;
\`\`\`

**Defined in**: [variables.ts:1](http://source-url)

Comments for objectLiteralVariable

## See

xyz.com

## Type declaration

| Name | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| <a id="valuea"></a> \`valueA\` | \`number\` | 100 | Comments for valueA |
| <a id="valueb"></a> \`valueB\` | \`boolean\` | true | - |
| <a id="valuex"></a> \`valueX\` | \`object\` | - | Comments for valueX |
| \`valueX.valueA\` | \`number\`[] | - | Comment for valueX.valueA |
| \`valueX.valueY\` | (\`z\`: \`string\`) => \`object\` | - | - |
| \`valueX.valueZ\` | \`string\` | 'foo' | - |
| <a id="valuey"></a> \`valueY\` | (\`unionParam\`: \`"a"\` \\| \`"b"\`, \`_undercoreParam_\`: \`string\`) => \`string\` | - | - |
"
`;
